--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "VisitTemajuk"]
-	path = VisitTemajuk
-	url = https://github.com/zaidanrafif/VisitTemajuk.git
+[submodule "visit-temajuk"]
+    path = visit-temajuk
+    url = https://github.com/zaidanrafif/VisitTemajuk.git
